Change flow no_overlap